<resources>
    <string name="app_name">MIIMIJ</string>

    <string name="miimij_login_logo">miimij</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_button_text">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password_q">Forgot Password?</string>
    <string name="sign_up_q">Sign Up?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_again">Email... again</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
</resources>
