<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin_bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_top"
    tools:context="com.miimij.miimij.SignUpActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >
    <EditText
        android:id="@+id/sign_up_first_name"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:textColor="@color/miimij_orange"
        android:textColorHint="@color/grey"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/sign_up_last_name"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:textColor="@color/miimij_orange"
        android:textColorHint="@color/grey"
        android:textStyle="bold"/>
        </LinearLayout>

    <EditText
        android:id="@+id/sign_up_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/miimij_orange"
        android:textColorHint="@color/grey"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/sign_up_username_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_again"
        android:textColor="@color/miimij_orange"
        android:textColorHint="@color/grey"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/miimij_orange"
        android:textColorHint="@color/grey"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/DOB_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/miimij_orange"
            android:textColorHint="@color/grey"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/miimij_orange"
            android:textColorHint="@color/grey"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/miimij_primary_dark"
        />

</LinearLayout>
